# tg_bot_avatars

./: .env.example  Dockerfile  Dockerfile.bot  README.md  db_scheme.dbml  docker-compose.yml  docker-entrypoint-bot.sh  docker-entrypoint.sh  justfile  manage.py  pyproject.toml  roadmap.txt  technical_specification.txt
domain/: __init__.py  message.py
llm/: __init__.py  llm_service.py  prompt_builder.py
providers/: __init__.py  redis_provider.py
server/apps/avatars/: admin.py  apps.py
server/apps/avatars/migrations/: 0001_initial.py  0002_alter_avatar_options.py  0003_avatar_active.py
server/apps/avatars/models/: __init__.py  avatar.py
server/apps/bot/: admin.py  apps.py
server/apps/bot/handlers/: __init__.py  callbacks.py  commands.py  dialog.py  start.py
server/apps/bot/keyboards/: __init__.py  avatar_keyboard.py
server/apps/bot/management/commands/: runbot.py
server/apps/bot/migrations/: 0001_initial.py  0002_alter_telegramuser_options_telegramuser_username_and_more.py
server/apps/bot/models/: __init__.py  telegram_user.py
server/apps/bot/services/: __init__.py  telegram_user_service.py
server/apps/bot/states/: __init__.py  dialog_states.py
server/apps/core/: provider.py  tests.py  urls.py
server/apps/core/auth/: authentication.py  constants.py  exceptions.py  serializers.py  services.py  urls.py  utils.py
server/apps/core/auth/serializers/: login.py  refresh.py
server/apps/core/auth/views/: login.py  logout.py  refresh.py
server/apps/core/migrations/: 0001_initial.py
server/apps/core/models/: __init__.py  user.py
server/apps/core/views/: health.py
server/apps/llm/: simple_llm.py
server/apps/memory/: admin.py  apps.py
server/apps/memory/migrations/: 0001_initial.py  0002_memoryfact_delete_avatarfact_and_more.py
server/apps/memory/models/: __init__.py  avatar_fact.py
server/apps/users/: admin.py  apps.py
server/apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_id.py
server/apps/users/models/: __init__.py  user.py
server/configs/: settings.py  urls.py
services/: __init__.py  dialog_service.py  exceptions.py  fact_trigger_service.py  llm_rate_limit_service.py  memory_service.py  short_memory_service.py  streaming_service.py
utils/: __init__.py  token_counter.py
